# terminal-ai

./: pyproject.toml
.github/workflows/: ci-cd.yml
terminal_ai/: main.py
tests/: test_groqapi.py
